--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "osio/module-maillwithattachment",
+    "name": "osio/magento-mail_attachment",
     "description": "Magento Mail lWith Attachment",
     "type": "magento2-module",
     "license": "MIT",
@@ -18,7 +18,7 @@
             "registration.php"
         ],
         "psr-4": {
-            "Osio\\MaillWithAttachment\\": ""
+            "Osio\\MagentoMailAttachment\\": ""
         }
     }
 }
