--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
     "description": "Magento Mail lWith Attachment",
     "type": "magento2-module",
     "license": "MIT",
-    "version": "0.1.2",
+    "version": "0.2.ß",
     "authors": [
         {
             "name": "Osiozekhai Aliu"
